# vadocs

./: .gitignore  README.md  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md
docs/adrs/: adr_26001_dogfooding_self_documentation.md
docs/api/: configuration.md  index.md  models.md  parsing.md
docs/developer_guide/: 01_architecture.md  02_data_models.md  03_plugins.md  04_development.md
docs/for_developers/: 01_architecture.md  02_data_models.md  03_plugins.md  04_development.md
docs/rnd/: move-to-repo.md  poc.ipynb  poc.md
misc/plan/: plan_20260207_58f71d.md
